fix(task): correct vertical alignment of assignee
Related to: CAM-2987

--- a/webapps/client/scripts/task/styles.less
+++ b/webapps/client/scripts/task/styles.less
@@ -5,14 +5,15 @@
   }
 
   .meta {
-    // &:first-child {
-    //   margin-bottom: 0;
-    // }
-
     width: 50%;
     float: left;
+
     &:last-child {
       clear: right;
+    }
+
+    li {
+      vertical-align: middle;
     }
 
     input {
@@ -28,14 +29,11 @@
 
   .assignee {
     [cam-widget-inline-field] {
-      top: -3px;
-
       .view-value {
         max-width: 120px;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
-        display: inline-block;
         vertical-align: bottom;
 
         .ng-binding {
@@ -49,7 +47,7 @@
 
     .reset-assignee,
     .unclaim {
-      top: -3px;
+      top: 2px;
     }
   }
 }
@@ -265,7 +263,8 @@
 }
 
 .actors {
-  margin: 0;
+  margin-left: 0;
+  margin-right: 0;
   text-align: right;
   > li {
     &:last-child {
@@ -284,10 +283,6 @@
     text-overflow: ellipsis;
     max-width: 250px;
     white-space: nowrap;
-    height: 20px;
-    line-height: 20px;
-    display: inline-block;
-    // vertical-align: bottom;
   }
 }
 
